Added CSS and separate ids for the 2 suite symbols

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div class="card">
-      <div class="card-suite">SUITE</div>
+      <div class="card-suite" id="suite-top">SUITE</div>
       <div id="card-value">VALUE</div>
-      <div class="card-suite">SUITE</div>
+      <div class="card-suite" id="suite-bottom">SUITE</div>
     </div>
     <script src="app.js"></script>
   </body>
